# OpenGL_Blur

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blur.vert  main.cpp  san_gl_framebuffer.hpp  san_gl_utils.hpp  san_gl_vao.hpp  san_gl_window.hpp
.github/workflows/: cmake.yml
images/: sophie-turner-LZVmvKlchM0-unsplash.txt
shader/: blur.frag
src/: main.cpp  san_gl_framebuffer.hpp  san_gl_shader.hpp  san_gl_utils.cpp  san_gl_utils.hpp  san_gl_window.cpp  san_gl_window.hpp
